--- a/styles/styles.css
+++ b/styles/styles.css
@@ -35,6 +35,12 @@ a {
   font-family: inherit;
 }
 
+header {
+  height: 100vh;
+  color: var(--color-white);
+  overflow: hidden;
+}
+
 section {
   min-height: 100vh;
   width: 100%;
@@ -42,4 +48,30 @@ section {
   left: 0;
   top: 0;
   padding: 3rem 18rem;
+}
+
+.section {
+  transform: translateY(-100%) scale(0);
+  transition: all 0.4s ease-in-out;
+  background-color: var(--color-primary);
+}
+
+.sec1 {
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.sec2 {
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.sec3 {
+  display: none;
+  transform: translateY(0) scale(1);
+}
+
+.sec4 {
+  display: none;
+  transform: translateY(0) scale(1);
 }
