--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,3 +75,15 @@ section {
   display: none;
   transform: translateY(0) scale(1);
 }
+
+.controls {
+  position: fixed;
+  z-index: 10;
+  top: 50%;
+  right: 3%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transform: translateY(-50%);
+}
