--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,4 +86,15 @@ section {
   align-items: center;
   justify-content: center;
   transform: translateY(-50%);
+  .control {
+    padding: 1rem;
+    cursor: pointer;
+    background-color: var(--color-grey-4);
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
