--- a/styles/styles.css
+++ b/styles/styles.css
@@ -81,6 +81,28 @@ section {
   background-color: yellow;
 }
 
+.sec5 {
+  display: none;
+  transform: translateY(0) scale(1);
+  background-color: dodgerblue;
+}
+
+@keyframes scaleAnim {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) scaleY(1);
+    opacity: 1;
+  }
+}
+
+.active {
+  display: block;
+  animation: scaleAnim 1s ease-in-out;
+}
+
 .controls {
   position: fixed;
   z-index: 10;
