--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -178,6 +178,22 @@ section {
       }
     }
   }
+  .right-header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-right: 18rem;
+    .name {
+      font-size: 3rem;
+      span {
+        color: var(--color-secondary);
+      }
+    }
+    p {
+      margin: 1.5rem 0;
+      line-height: 2rem;
+    }
+  }
 }
 
 /*Independent components*/
