Flex Container w/ Child Elements
1) When setting an element as a flex container, all immediate child elements become flex items and will fit their respective contents inside the flex container, even if that means not occupying all the space.
2) If we want to fill the container or adjust the size we would need to specify the width and height of the individual items.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -198,6 +198,10 @@ section {
 }
 
 /*Independent components*/
+.btn-con {
+  display: flex;
+}
+
 .main-btn {
   border-radius: 30px;
   color: inherit;
