--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -197,6 +197,10 @@ section {
 }
 
 /*Independent components*/
+.btn-con {
+  display: flex;
+}
+
 .main-btn {
   border-radius: 30px;
   color: inherit;
