About Section Right Side Column
1) Number of project's completed column.
2) Updated SASS compiler for watching CSS code.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -196,6 +196,25 @@ section {
   line-height: 2rem;
 }
 
+/*About*/
+.about-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 3.5rem;
+  padding-bottom: 5rem;
+}
+.about-container .right-about {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 2rem;
+}
+.about-container .right-about .about-item {
+  border: 1px solid var(--color-grey-5);
+  border-radius: 5px;
+  transition: all 0.4s ease-in-out;
+  box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
 /*Independent components*/
 .btn-con {
   display: flex;
