--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -65,6 +65,7 @@ section {
 .sec2 {
   display: none;
   transform: translateY(0) scale(1);
+  background-color: red;
 }
 
 .sec3 {
@@ -210,6 +211,12 @@ section {
       border-radius: 5px;
       transition: all 0.4s ease-in-out;
       box-shadow: 1px 2px 15px rgba(0, 0, 0, 0.1);
+      &:hover {
+        cursor: default;
+        transform: translateY(-5px);
+        border: 1px solid var(--color-secondary);
+        box-shadow: 1px 4px 16px rgba(0, 0, 0, 0.32);
+      }
     }
   }
 }
