Progress Bars Container

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -261,6 +261,11 @@ section {
 
 .about-stats {
   padding-bottom: 4rem;
+  .progress-bars {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem;
+  }
 }
 
 /*Independent components*/
